--- a/src/main/webapp/WebContent/css/T002.css
+++ b/src/main/webapp/WebContent/css/T002.css
@@ -36,6 +36,41 @@ body {
 	justify-content: space-between;
 }
 
+
+.sex-select {
+    position: relative;
+    display: inline-block;
+}
+
+
+#cboSex {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    padding: 5px 30px 5px 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #fff;
+    width: 100px; 
+    cursor: pointer;
+}
+
+
+.sex-select::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 10px; 
+    width: 0;
+    height: 0;
+    border-left: 7px solid transparent;
+    border-right: 7px solid transparent;
+    border-top: 10px solid black; 
+    transform: translateY(-50%);
+    pointer-events: none;
+}
+
+
 .search-form label {
 	margin-right: 15px;
 }
@@ -107,6 +142,35 @@ body {
 .pagination {
 	text-align: center;
 	margin: 10px 0;
+}
+
+/* Ẩn checkbox mặc định */
+.custom-checkbox input[type="checkbox"] {
+    display: none;
+}
+
+/* Tạo ô vuông custom */
+.custom-checkbox span {
+    width: 12px;
+    height: 12px;
+    border: 1px solid #555;
+    display: inline-block;
+    position: relative;
+    vertical-align: middle;
+    cursor: pointer;
+    margin-left : 3px;
+}
+
+.custom-checkbox input[type="checkbox"]:checked + span::after {
+    content: "";
+    position: absolute;
+    left: 3px;
+    top: -1px;
+    width: 3px;
+    height: 9px;
+    border: solid black;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
 }
 
 .actions {
